# mkdocs-merge

./: .codacy.yml  .gitignore  .travis.yml  404.html  CHANGELOG  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  tox.ini
.github/workflows/: build.yml  deploy-mkdocs.yml  docs-publish.yml
changelog/: index.html
docs/: changelog.md  index.md
mkdocsmerge/: __init__.py  __main__.py  merge.py
mkdocsmerge/tests/: copy_tree_test.py  merge_test.py  multiple_merge_test.py  run_merge_test.py  utils.py
search/: search_index.json
